--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+Tue May  4 09:25:12 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>
+
+	* Prepared Version 1.1.1 release.
+
 Mon May  3 14:10:30 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>
 
 	* Added corner coordinate reporting to listgeo, and made full
