*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@198 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jul 12 12:56:51 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>
+
+	* Made scale a parameter of CT_Stereographic.
+
+	* geotifcp modified to copy existing geotiff information by default.
+
 Tue May  4 09:25:12 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>
 
 	* Prepared Version 1.1.1 release.
