--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,12 @@
+Wed Sep 29 10:10:39 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>
+
+	* Upgraded CSV files to EPSG 4.3 from EPSG 4.2.  
+
+Fri Sep 17 10:53:52 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>
+
+	* Added ProjRectifiedGridAngleGeoKey(3096) and support for it's
+	  use with Oblique Mercator in geo_normalize.c.
+
 Thu Sep 16 17:22:55 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>
 
 	* Added support for pure tiepoints, and the transformation
