*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@242 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+Fri Dec 10 13:24:21 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>
+
+	* Added "--with-incode-epsg" support to configure, added 
+	cpl_csv_incode.c and csv/*.c tables.
+
 Wed Sep 29 10:10:39 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>
 
 	* Upgraded CSV files to EPSG 4.3 from EPSG 4.2.  
