*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@246 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,5 +1,10 @@
 Fri Dec 10 13:24:21 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>
 
+	* Upgraded .csv and .c files to EPSG 4.4.
+
+	* Fixed bug setting the false northing for files with 
+	ProjCenterNorthingGeoKey set in GTIFGetDefn().
+
 	* Added "--with-incode-epsg" support to configure, added 
 	cpl_csv_incode.c and csv/*.c tables.
 
