--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+Sun Feb 20 16:43:03 2000  Frank Warmerdam  <warmerda@gdal.velocet.ca>
+
+	* Prepare 1.1.2 release.
+
 Tue Jan  4 10:59:48 2000  Frank Warmerdam  <warmerda@gdal.velocet.ca>
 
 	* Fixed inclusion of geoparms in object file list at Derricks
