--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-21  Frank Warmerdam  <warmerda@cs46980-c>
+
+	* Added -e option to geotifcp to intialize tiepoint+pixelscale
+	based on an ESRI world file. 
+
 Sun Feb 20 16:43:03 2000  Frank Warmerdam  <warmerda@gdal.velocet.ca>
 
 	* Prepare 1.1.2 release.
