--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-21  Frank Warmerdam  <warmerda@cs46980-c>
+
+	* Removed the GTIFTiepointTranslate() code because it it badly
+	broken.
+
 2000-06-09    <warmerda@CS46980-B>
 
 	* Added knowledge of NAD27, NAD83, WGS72, WGS84, their datums,
