added libjpeg support
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@285 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-22  Frank Warmerdam  <warmerda@cs46980-c>
+
+	* Added libjpeg to configure, and fixed up libjpeg/libz ordering.
+
 2000-08-21  Frank Warmerdam  <warmerda@cs46980-c>
 
 	* Removed the GTIFTiepointTranslate() code because it it badly
