--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,5 +1,9 @@
 2000-08-22  Frank Warmerdam  <warmerda@cs46980-c>
 
+	* Prepare 1.1.3 release.
+
+	* Added install target to makefile.  Defaults to /usr/local/...
+
 	* Added libjpeg to configure, and fixed up libjpeg/libz ordering.
 
 2000-08-21  Frank Warmerdam  <warmerda@cs46980-c>
