--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+2000-09-15  Frank Warmerdam  <warmerda@cs46980-c>
+
+	* Fixed order of parameters for LCC 2SP.  When parameters
+	were read from EPSG CSV files the standard parallels and origin
+	were mixed up.  This affects alot of state plane zones!
+
 2000-08-22  Frank Warmerdam  <warmerda@cs46980-c>
 
 	* Prepare 1.1.3 release.
