*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@302 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-29  Frank Warmerdam  <warmerda@cs46980-c>
+
+	* Fixed bug in CPLReadLine() that primarily affects windows, and
+	SunOS 4.x.  Bug fix courtesy of shumilin@scanex.ru.
+
 2000-09-15  Frank Warmerdam  <warmerda@cs46980-c>
 
 	* Added the -proj4 option to listgeo to report it's selected
