fixed LCC parm order when parameters read directly from geotiff file
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@304 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -3,6 +3,7 @@
 	* Fixed order of parameters for LCC when read directly from a 
 	file to match that when read from EPSG tables.  This is now
 	always: 0-NatOriginLat, 1-NatOriginLong, 2-StdParallel1, 3-StdParallel2
+	This change is only in geo_normalize.c.
 
 2000-09-29  Frank Warmerdam  <warmerda@cs46980-c>
 
