updated notes on building with PROJ
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@314 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/README
+++ b/geotiff/libgeotiff/README
@@ -89,6 +89,16 @@ Common Configuration Issues:
    % make clean
    % make
 
+ o If you want to build in support for the PROJ.4 library, so that listgeo
+   can report corner coordinates in lat/long, it may be necessary to 
+   specify the directory containing the libproj include files, and library.
+
+   % rm config.status
+   % setenv PROJ_HOME /contrib/proj-4.4.1/src
+   % ./configure
+   % make clean
+   % make
+
 Test Programs:
 
 There are two demonstration test programs "makegeo" and "listgeo"
