--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-23  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Updated notes for building PROJ_HOME set in README.
+
 2000-10-13  Frank Warmerdam  <warmerda@cs46980-c>
 
 	* Added EquidistantConic support in PROJ.4 translation.
