--- a/geotiff/libgeotiff/README
+++ b/geotiff/libgeotiff/README
@@ -92,10 +92,10 @@ Common Configuration Issues:
  o If you want to build in support for the PROJ.4 library, so that listgeo
    can report corner coordinates in lat/long, it may be necessary to 
    specify the directory containing the libproj include files, and library.
+   (PROJ.4 can also be disabled by passing --without-proj)
 
    % rm config.status
-   % setenv PROJ_HOME /contrib/proj-4.4.1/src
-   % ./configure
+   % ./configure --with-proj=/contrib/proj-4.4.1
    % make clean
    % make
 
