--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,10 @@
+2000-12-05  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* modified geotiff_proj4.c to use +R_A to use spherical radius
+	of equal area, similar to other systems like GCTP for the
+	Miller Cylindrical and VanDerGrinten.  Should also do for any
+	other spherical projections as identified.
+
 2000-11-30  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Fixed Makefile.in to install all the .inc files with the include
