added release notes
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@329 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-28  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Prepare 1.1.4 release.
+
 2000-12-12  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Fix geotifcp.c to avoid u_char problems, include getopt.h.
