*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@340 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,9 +1,10 @@
-
 ==============================================================================
 
 2000-12-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Prepare 1.1.4 release.
+
+	* Added HOWTO-RELEASE file. 
 
 	* Removed getopt.h from geotifcp.c to build on windows.
 
