*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@343 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2001-01-02  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Updated README.WIN to mention VCVARS32.BAT.
+
 ==============================================================================
 
 2000-12-28  Frank Warmerdam  <warmerdam@pobox.com>
