--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,5 +1,8 @@
 2001-01-02  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* Added support for .tfw files with rotatational coefficents in
+	geotifcp.c.
+
 	* Updated README.WIN to mention VCVARS32.BAT.
 
 ==============================================================================
