*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@349 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,8 +1,9 @@
-==============================================================================
-
 2001-01-17  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Prepare 1.1.4 final release.
+
+	* Modified csv search code to include a search of 
+	share/epsg_csv and /usr/share/epsg_csv
 
 2001-01-02  Frank Warmerdam  <warmerdam@pobox.com>
 
