fixed printf/fprintf problems
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@363 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2001-02-23  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Fixed GTIFPrintDefn() to use fprintf( fp ), instead of printf(), 
+	as per fixes from Alan Gray.
+
 2001-01-19  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Added tiffconf.h to libtiff_private.  Secretly reissue 1.1.4 source
