--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2001-02-28  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Added PCS_HD72_EOV to epsg_pcs.inc, and added GCS_GGRS87 to 
+	epsg_gcs.inc at the request of Prof. Dr. Irwin Scollar. 
+
 2001-02-23  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Fixed GTIFPrintDefn() to use fprintf( fp ), instead of printf(), 
