*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@383 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,12 @@
+2001-03-04  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* GTIFGetDefn() now calls CSVDeaccess() to avoid memory/file leaks.
+
+	* Added docs/api, and related for Doxygen generated API docs.
+
+	* Fixed memory leaks in GTIFPrintDefn() (geo_normalize.c), and
+	GTIFImageToPCS(), GTIFPCSToImage() (geo_trans.c).  
+
 2001-03-01  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Added PCS_GGRS87_Greek_Grid for Dr. Irwin Scollar.
