--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,5 +1,7 @@
 2001-03-04  Frank Warmerdam  <warmerdam@pobox.com>
 
+	Fixed various memory leaks bugs thanks to Alan Gray. 
+	
 	* GTIFGetDefn() now calls CSVDeaccess() to avoid memory/file leaks.
 
 	* Added docs/api, and related for Doxygen generated API docs.
