*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@392 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,12 @@
+2001-04-06  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* listgeo.c: added -i flag to report inverse transformation results,
+	testing the PCSToImage() function.  Not documented for user though.
+
+	* GTIFPCSToImage(): added support for inverting matrix transformations.
+
+	* Fixed GTIFGetDefn() to support custom ellipsoid definition.
+
 2001-03-04  Frank Warmerdam  <warmerdam@pobox.com>
 
 	Fixed various memory leaks bugs thanks to Alan Gray. 
