added support for reading custom ellipsoid definitions
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@393 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,10 @@
+2001-04-17  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: added support for reading custom ellipsoid 
+	definitions.
+	
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=42
+
 2001-04-06  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* listgeo.c: added -i flag to report inverse transformation results,
