fix memory leaks in GTIFPrintDefn()
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@395 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,5 +1,10 @@
 2001-04-17  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* geo_normalize.c: fixed memory leaks in GTIFGetDefn().
+
+	* cpl_serv.c: Fixed failure to set pointer to NULL when freeing
+	line buffer in CPLReadLine(). 
+
 	* geo_normalize.c: added support for reading custom ellipsoid 
 	definitions.
 	
