--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2001-05-02  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_set.c: modified so that a count of -1 means to delete
+	the tag from the list.
+
 2001-04-17  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_normalize.c: fixed memory leaks in GTIFGetDefn().
