*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@403 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,10 @@
+2001-06-28  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* cpl_csv_incode.c: Use EQUAL instead of strcasecmp() to ensure code 
+	builds on windows.  As per 
+
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=59
+
 2001-05-02  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_set.c: modified so that a count of -1 means to delete
