*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@405 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2001-07-09  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* cpl_serv.c: Another bug with pszRLBuffer being freed but not set
+	to NULL.  
+
 2001-06-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* cpl_csv_incode.c: Use EQUAL instead of strcasecmp() to ensure code 
