*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@413 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-28  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_trans.c: fixed memory leak of transform in GTIFPCSToImage()
+	as reported by Ng Lay Keow (Nicole).
+
 2001-07-09  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* cpl_serv.c: Another bug with pszRLBuffer being freed but not set
