--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,10 @@
+2002-01-03  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Prepare 1.1.5 release.
+
+	* geo_normalize.c: call CSVDeaccess() at end of GTIFPrintDefn() so that
+	listgeo has closed all file handles by the end. 
+
 2001-11-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_trans.c: fixed memory leak of transform in GTIFPCSToImage()
