*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@421 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-04  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* configure.in: fixed up zip/jpeg arg so that --with-jpeg will work
+	as reported by Julien Demaria.
+
 2002-01-03  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Prepare 1.1.5 release.
