--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-11  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Added CSVDeaccess() stub ... submitted by Derrick Brashear.
+
+	* README: Fixed url.
+
 2002-02-04  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* configure.in: fixed up zip/jpeg arg so that --with-jpeg will work
