--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-12  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* configure.in, Makefile.in, bin/Makefile.in: extensive updates to
+	support building libgeotiff as a DLL on Cygwin.
+
 2002-02-11  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Added CSVDeaccess() stub ... submitted by Derrick Brashear.
