--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,12 @@
+2002-02-25  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* configure.in: added setting of EXEEXT macro - allow .exe files on
+	Cygwin.
+
+	* libxtiff/xtiff.c: Rewrote to use new "custom field" interface to
+	libtiff (requires libtiff 3.6.x).   Removed xtiffiop.h.  No longer
+	a dependence on private libtiff include files.
+
 2002-02-12  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* configure.in, Makefile.in, bin/Makefile.in: extensive updates to
