--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,10 @@
+2002-06-18  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* cpl_csv.h, cpl_serv.h, cpl_csv.c, cpl_csv_incode.c, geo_normalize.c:
+	Removed the cpl_csv.h file, and merged it into cpl_serv.h.  Modified
+	all modules including cpl_csv.h to include cpl_serv.h instead.  This
+	is to avoid a conflict with the cpl_csv.h in GDAL.
+
 2002-05-31  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_print.c: modified to using backslash escaping for backslashes,
