--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-19  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* bin/listgeo.c: Added -d (report corners in decimal degrees) flag
+	to listgeo as submitted by Derrick Brashear. 
+
 2002-07-09  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geotiff_proj4.c: Fixed translation of polar stereographic to PROJ.4
