--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-21  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_names.c: added support for VerticalUnitsGeoKey as per bug 203.
+
 2002-07-19  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* bin/listgeo.c: Added -d (report corners in decimal degrees) flag
