--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,11 @@
+2002-09-27  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_free.c, geo_names.c, geo_keyp.h, geo_new.c, geo_set.c, 
+	geo_write.c: Rainer Wiesenfarth (wiesi at ngi dot de) submitted
+	patches to support deletion, and changes to ascii tags.  To accomplish
+	this the ASCII tags are now allocated dynamically.  The
+	GTIFF_ASCIIPARAMS are split up when read, and recombined when written.
+
 2002-09-21  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_names.c: added support for VerticalUnitsGeoKey as per bug 203.
