--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,11 @@
+2002-11-23  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_free.c: don't read past end of keys list. Introduced by 
+	changes from Rainer.
+
+	* geo_new.c: fix memory leak of tempData.tk_asciiParams.  Introduced
+	by changes from Rainer. 
+
 2002-09-27  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libxtiff/{xtiff.c,xtiffio.h}: Added XTIFFClientOpen() function
