--- a/geotiff/libgeotiff/csv/README
+++ b/geotiff/libgeotiff/csv/README
@@ -34,6 +34,7 @@ are present:
  build_pcs.py: a python script to build pcs.csv and gcs.csv from the other
                EPSG files. 
  csv_tools.py: supportting python functions for build_pcs.py.
+ csv.txt: A definition of the csv format.
  
 Libgeotiff uses the following tables.  The rest are present for completeness.
 
